css/annotator.css
/* ... */
.ie6 .annotator-notice {
	position: absolute;
}

.annotator-notice-success {
	border-color: #3665f9;
}

.annotator-notice-error {
	border-color: #ff7e00;
}

.annotator-notice p {
	margin: 0;
}

.annotator-notice a {
	color: #fff;
}

.annotator-notice-show {
	top: 0;
}

/* Annotator Tags Plugin
-------------------------------------------------------------------- */

.annotator-tags {
	margin-bottom: -2px;
}

.annotator-tags .annotator-tag {
	display: inline-block;
	padding: 0 8px;
	margin-bottom: 2px;
	line-height: 1.6;
	font-weight: bold;
	background-color: rgb(230, 230, 230);
	-webkit-border-radius: 8px;
	-moz-border-radius: 8px;
	-o-border-radius: 8px;
	border-radius: 8px;
}

/* Annotator Filter Plugin
-------------------------------------------------------------------- */

.annotator-filter {
	z-index: 9998; /* notifications/popups at 9999; filter bar should be lower */
	position: fixed;
	top: 0;
	right: 0;
	left: 0;
	text-align: left;
	line-height: 0;
	border: none;
	border-bottom: 1px solid #878787;
	padding-left: 10px;
	padding-right: 10px;
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	-o-border-radius: 0;
	border-radius: 0;
	-webkit-box-shadow: 
		inset 0 -1px 0 rgba(255, 255, 255, 0.3);
	-moz-box-shadow: 
		inset 0 -1px 0 rgba(255, 255, 255, 0.3);
	-o-box-shadow: 
		inset 0 -1px 0 rgba(255, 255, 255, 0.3);
	box-shadow: 
		inset 0 -1px 0 rgba(255, 255, 255, 0.3);
}

.annotator-filter strong {
	font-size: 12px;
	font-weight: bold;
	color: #3c3c3c;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
	position: relative;
	top: -9px;
}


.annotator-filter .annotator-filter-property,
.annotator-filter .annotator-filter-navigation {
	position: relative;
	display: inline-block;
	overflow: hidden;
	line-height: 10px;
	padding: 2px 0;
	margin-right: 8px;
}

.annotator-filter .annotator-filter-property label,
.annotator-filter .annotator-filter-navigation button {
	text-align: left;
	display: block;
	float: left;
	line-height: 20px;
	-webkit-border-radius: 10px 0 0 10px;
	-moz-border-radius: 10px 0 0 10px;
	-o-border-radius: 10px 0 0 10px;
	border-radius:  10px 0 0 10px;
}

.annotator-filter .annotator-filter-property label {
	padding-left: 8px;
}

.annotator-filter .annotator-filter-property input {
	display: block;
	float: right;
	-webkit-appearance: none;
	background-color: #fff;
	border: 1px solid #878787;
	border-left: none;
	padding: 2px 4px;
	line-height: 16px;
	min-height: 16px;
	font-size: 12px;
	width: 150px;
	color: #333;
	background-color: #f8f8f8;
	-webkit-border-radius: 0 10px 10px 0;
	-moz-border-radius: 0 10px 10px 0;
	-o-border-radius: 0 10px 10px 0;
	border-radius:  0 10px 10px 0;
	-webkit-box-shadow: 
		inset 0 1px 1px rgba(0, 0, 0, 0.2);
	-moz-box-shadow: 
		inset 0 1px 1px rgba(0, 0, 0, 0.2);
	-o-box-shadow: 
		inset 0 1px 1px rgba(0, 0, 0, 0.2);
	box-shadow: 
		inset 0 1px 1px rgba(0, 0, 0, 0.2);
	
}

.annotator-filter .annotator-filter-property input:focus {
	outline: none;
	background-color: #fff;
}

.annotator-filter .annotator-filter-clear {
	position: absolute;
	right: 3px;
	top: 6px;
	border: none;
	text-indent: -900em;
	width: 15px;
	height: 15px;
	background-position: 0 -90px;
	opacity: 0.4;
}

.annotator-filter .annotator-filter-clear:hover,
.annotator-filter .annotator-filter-clear:focus {
	opacity: 0.8;
}

.annotator-filter .annotator-filter-clear:active {
	opacity: 1;
}

.annotator-filter .annotator-filter-navigation button {
	border: 1px solid rgb(162, 162, 162);
	padding: 0;
	text-indent: -900px;
	width: 20px;
	min-height: 22px;
	-webkit-box-shadow: 
		inset 0 0 5px rgba(255, 255, 255, 0.2),
		inset 0 0 1px rgba(255, 255, 255, 0.8);
	-moz-box-shadow:
		inset 0 0 5px rgba(255, 255, 255, 0.2),
		inset 0 0 1px rgba(255, 255, 255, 0.8);
	-o-box-shadow:
		inset 0 0 5px rgba(255, 255, 255, 0.2),
		inset 0 0 1px rgba(255, 255, 255, 0.8);
	box-shadow:
		inset 0 0 5px rgba(255, 255, 255, 0.2),
		inset 0 0 1px rgba(255, 255, 255, 0.8);
}

.annotator-filter .annotator-filter-navigation button,
.annotator-filter .annotator-filter-navigation button:hover,
.annotator-filter .annotator-filter-navigation button:focus {
	color: transparent;
}

.annotator-filter .annotator-filter-navigation button::after {
	position: absolute;
	top: 9px;
	left: 8px;
	content: "";
	display: block;
	width: 7px;
	height: 7px;
	background-position: 0 -210px;
}

.annotator-filter .annotator-filter-navigation button:hover::after {
	background-position: 0 -225px;
}

.annotator-filter .annotator-filter-navigation .annotator-filter-next {
	-webkit-border-radius: 0 10px 10px 0;
	-moz-border-radius: 0 10px 10px 0;
	-o-border-radius: 0 10px 10px 0;
	border-radius:  0 10px 10px 0;
	border-left: none;
}

.annotator-filter .annotator-filter-navigation .annotator-filter-next::after {
	left: auto;
	right: 9px;
	background-position: 0 -240px;
}

.annotator-filter .annotator-filter-navigation .annotator-filter-next:hover::after {
	background-position: 0 -256px;
}

.annotator-hl-active {
	background: rgba(255, 255, 10, 0.8);
}

.annotator-hl-filtered {
	background-color: transparent;
}

